# keyboard_slave_firmware

./: .gitignore  CMakeLists.txt  common.h  main.c  readme.md  slave.c  slave.h  slave_left.c  slave_right.c
